test/assets/invalid/case/root-expect-list.hs
myLength = case (1, 2) of
    [] -> 0
    [a] -> 1
    more -> 2